--- a/src/components/Navigation/NavigationMenu.module.css
+++ b/src/components/Navigation/NavigationMenu.module.css
@@ -17,6 +17,7 @@
   position: relative;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
+  transition: all .6s ease-in-out;
 }
 
 .nav_link.active,
@@ -24,13 +25,28 @@
   color: #40A9FF;
 }
 
-@media screen and (max-width: 906px) {
+@media screen and (max-width: 1005px) {
   .nav_link {
-    font-size: 10px;
     padding-left: 10px;
     padding-right: 0px;
+    font-size: 18px;
   }
 }
+@media screen and (max-width: 920px) {
+  .nav_link {
+    padding-left: 10px;
+    padding-right: 0px;
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 689px) {
+  .nav_link {
+    padding-left: 10px;
+    padding-right: 0px;
+    font-size: 14px;
+  }
+}
+
 
 @media screen and (max-width: 599px) {
   .navbar_wrapper {
@@ -44,7 +60,7 @@
   .navbar_wrapper.menuOpen {
     display: block;
     position: fixed;
-    top: 56px;
+    top: 70px;
     z-index: 99;
     transition: all 0.2s ease-in-out;
     box-shadow: var(--box_shadow);
